@@ -1,5 +1,10 @@
 2001-08-03  Jeff Freedman  <jeff@amy.nerble.net>
 
+	* usecode/conversation.cc (Conversation): Show faces with
+	translucency, and center text if screen is filled by face.
+
+	* usecode/intrinsics.cc: Don't check for blocking if it looks like
+	a drawbridge (this whole thing is kind of a mess!).
 	* gamewin.cc: Don't get stuck after teleporting.
 	* actions.cc: Avatar can open doors now.
 
